@@ -1,6 +1,6 @@
 #textdomain wesnoth-lib
 ###
-### Definition of a listbox
+### Definition of a (horizontal) listbox
 ###
 ###
 ### NOTE a listbox has multiple scroll button options, these aren't all used
@@ -132,7 +132,7 @@
 
 [listbox_definition]
 	id = "default"
-	description = "Testing version."
+	description = "Default listbox."
 
 	{_GUI_RESOLUTION 
 		({GUI_TINY__RESOLUTION})
@@ -152,6 +152,29 @@
 	}
 
 [/listbox_definition]
+
+[horizontal_listbox_definition]
+	id = "default"
+	description = "Default horizontal listbox."
+
+	{_GUI_RESOLUTION 
+		({GUI_TINY__RESOLUTION})
+		({GUI_TINY__FONT_SIZE__DEFAULT})
+		()
+		({GUI__FONT_COLOUR_ENABLED__DEFAULT})
+		({GUI__FONT_COLOUR_DISABLED__DEFAULT})
+	}
+
+	
+	{_GUI_RESOLUTION 
+		({GUI_NORMAL__RESOLUTION}) 
+		({GUI_NORMAL__FONT_SIZE__DEFAULT}) 
+		() 
+		({GUI__FONT_COLOUR_ENABLED__DEFAULT}) 
+		({GUI__FONT_COLOUR_DISABLED__DEFAULT}) 
+	}
+
+[/horizontal_listbox_definition]
 
 #undef _GUI_RESOLUTION 
 
