@@ -10,6 +10,7 @@ src/gui/auxiliary/window_builder/button.cpp
 src/gui/auxiliary/window_builder/control.cpp
 src/gui/auxiliary/window_builder.cpp
 src/gui/auxiliary/window_builder/helper.cpp
+src/gui/auxiliary/window_builder/horizontal_listbox.cpp
 src/gui/auxiliary/window_builder/horizontal_scrollbar.cpp
 src/gui/auxiliary/window_builder/image.cpp
 src/gui/auxiliary/window_builder/label.cpp
