@@ -9,6 +9,7 @@ Version 1.7.3+svn:
    * Updated translations: Russian
  * User interface:
    * Removed the hotkey to enable/disable mouse scrolling
+   * Added a horizontal listbox
  * WML Engine:
    * Support for [show_if] inside [message]	
  * Miscellaneous and bugfixes:
